settle another bug that results in table headings not being centrally aligned

--- a/src/index.css
+++ b/src/index.css
@@ -497,6 +497,7 @@ input[type="boolean"] {
   align-items: center;
   padding: 30px;
   margin-left: -30px;
+  text-align: center;
 }
 
 .formatTablePopup {
